--- a/.github/workflows/qtwebengine_propietary_codecs.yml
+++ b/.github/workflows/qtwebengine_propietary_codecs.yml
@@ -1,19 +1,18 @@
-name: question_63477276
+name: build
 
 on: [push]
 
 jobs:
-  ci:
-    runs-on: Linux
-
-  steps:
+  ubuntu-build:
+    runs-on: ubuntu-latest
+    steps:
     - name: Checkout
-      uses: actions/checkout@v1
-      - name: Install Qt
-        uses: jurplel/install-qt-action@v2
-        with:
-          version: 5.15.1
-          dir: ${{ github.workspace }}/qt/
+      uses: actions/checkout@v2.0.0
+    - name: Install Qt
+      uses: jurplel/install-qt-action@v2
+      with:
+        version: 5.15.1
+        dir: ${{ github.workspace }}/qt/
     - name: Install Linux dependencies
       run: |
         sudo apt-get install git
