--- a/.github/workflows/qtwebengine_propietary_codecs.yml
+++ b/.github/workflows/qtwebengine_propietary_codecs.yml
@@ -15,7 +15,7 @@ jobs:
         dir: ${{ github.workspace }}/qt/
     - name: Install Linux dependencies
       run: |
-        sudo apt-get install -y gperf
+        sudo apt-get install -y gperf libnss3-dev
     - name: Build QtWebEngine
       run: |
         git clone -b 5.15.1 https://github.com/qt/qtwebengine.git
