--- a/.github/workflows/qtwebengine_propietary_codecs.yml
+++ b/.github/workflows/qtwebengine_propietary_codecs.yml
@@ -15,7 +15,7 @@ jobs:
         dir: ${{ github.workspace }}/qt/
     - name: Install Linux dependencies
       run: |
-        sudo apt-get install -y gperf libnss3-dev dbus
+        sudo apt-get install -y libxcursor-dev libxcomposite-dev libxdamage-dev libxrandr-dev libxtst-dev libxss-dev libdbus-1-dev libevent-dev libfontconfig1-dev libcap-dev libpulse-dev libudev-dev libpci-dev libnss3-dev libasound2-dev libegl1-mesa-dev gperf bison nodejs
     - name: Build QtWebEngine
       run: |
         git clone -b 5.15.1 https://github.com/qt/qtwebengine.git
