make && make install

--- a/.github/workflows/qtwebengine_propietary_codecs.yml
+++ b/.github/workflows/qtwebengine_propietary_codecs.yml
@@ -22,3 +22,5 @@ jobs:
         cd qtwebengine
         git submodule update --init
         qmake . -- -webengine-proprietary-codecs
+        make
+        make install
