make && make install

--- a/.github/workflows/qtwebengine_propietary_codecs.yml
+++ b/.github/workflows/qtwebengine_propietary_codecs.yml
@@ -15,6 +15,7 @@ jobs:
         dir: ${{ github.workspace }}/qt/
     - name: Install Linux dependencies
       run: |
+        sudo apt-get install '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxrender-dev libxi-dev libxkbcommon-dev libxkbcommon-x11-dev
         sudo apt-get install -y libxcursor-dev libxcomposite-dev libxdamage-dev libxrandr-dev libxtst-dev libxss-dev libdbus-1-dev libevent-dev libfontconfig1-dev libcap-dev libpulse-dev libudev-dev libpci-dev libnss3-dev libasound2-dev libegl1-mesa-dev gperf bison nodejs
     - name: Build QtWebEngine
       run: |
