--- a/.github/workflows/qtwebengine_propietary_codecs.yml
+++ b/.github/workflows/qtwebengine_propietary_codecs.yml
@@ -24,4 +24,7 @@ jobs:
         git submodule update --init
         qmake . -- -webengine-proprietary-codecs
         make
+    - name: Install QtWebEngine
+      run: |
+        cd qtwebengine
         make install
